--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,18 @@
 .env.test.local
 .env.production.local
 
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### VS Code ###
+.vscode/
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
