--- a/.github/workflows/ci.cd.prod.yml
+++ b/.github/workflows/ci.cd.prod.yml
@@ -30,8 +30,11 @@ jobs:
         run: npm install
 
       # 리액트 애플리케이션 빌드
-      - name: react build
-        run: npm run build
+      - name: react build and deploy
+        run: |
+          export PORT=3000
+          npm run build
+          npm start
 
       # 올릴 파일을 디렉터리에 모아서 보낼 것이므로 디렉터리를 생성함
       - name: Make Directory for deliver
